# bot-takeover-tui

./: DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  paradroid.py  pyproject.toml  pyrightconfig.json
bot_takeover_tui/: __init__.py  deck.py  engine.py  screens.py  transfer.py  tui.tcss
paradroid_tui/: app.py  droids.py  tiles.py  transfer.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
