[project]
name = "bot-takeover-tui"
version = "0.1.0"
description = "Terminal Paradroid — transfer your consciousness between droids"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bot_takeover_tui"]

[tool.setuptools.package-data]
bot_takeover_tui = ["tui.tcss"]
